vix/tests/checker-corpus/reject/bool-match-missing-false.vix
pub fn choose(cond: Bool) -> Int {
    match cond {
        true => 1,
    }
}
